# imbdmlive

./: .gitmodules  Cargo.toml  imbdmlive.example.toml
src/: config.rs  danmaku.rs  lib.rs  logger.rs  main.rs  state.rs
src/backend/: mod.rs
src/overlay/: hook.rs  mod.rs  renderer.rs
src/ui/: clipboard.rs  fonts.rs  mod.rs
