[package]
name = "imbdmlive"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "imbdmui"
path = "src/main.rs"

[dependencies]
hudhook = "0.9"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
] }

blivedm = "0.5"

futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

log = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
